--- a/css/app.css
+++ b/css/app.css
@@ -416,3 +416,22 @@ body {
     width: 20px;
     color: #6c757d;
 }
+
+.menu-img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+.table-responsive {
+    overflow-x: auto;
+}
+.menu-form {
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.preview-image {
+    max-width: 200px;
+    max-height: 200px;
+    margin-top: 10px;
+}
